styling fix for windows scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,10 @@
   flex-direction: column;
 }
 
+.crow {
+  width: calc(100vw - 20px);
+}
+
 .box {
   width: 300px;
   height: 200px;
